tests/purs/passing/QualifiedQualifiedImports.purs
module Main where

-- qualified import with qualified imported names
import Effect.Console (log) as Console

main = Console.log "Done"
