tests/purs/failing/ModuleNameLowercaseStart.purs
-- @shouldFailWith ErrorParsingModule
module moduleNameStartsWithMinuscule where

import Effect.Console (log)

main = log "Done"
